-i option in Table takes precedence over -c
Previously, if a column was requested, the `-i' option would be
ignored. But it often happens that the users forget a column name after
already typing several of their desired columns. So the opposite behavior
is preferred. Because when more than a couple of columns are needed, you
will probably forget the column identifiers of the last few and having to
retype everything is very frustrating. Something like how `--help' takes
precedence over all other options.

Also, when printing a table to a text file, we were mistakenly using the
same precision for float32 and float64! This has been corrected now.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -7571,14 +7571,22 @@ tools like AWK or sort, similar to the examples above.
 @item -i
 @itemx --information
 Only print the column information in the specified table on the
-command-line and exit. Each columns information (number, name, units, data
+command-line and exit. Each column's information (number, name, units, data
 type, and comments) will be printed as a row on the command-line. Note that
 the FITS standard only requires the data type (see @ref{Numeric data
-types}) and in plain text tables, no meta-data/information is
+types}), and in plain text tables, no meta-data/information is
 mandatory. Gnuastro has its own convention in the comments of a plain text
 table to store and transfer this information as described in @ref{Gnuastro
-text table format}. Note that if columns have been requested with the
-@option{--column} option (below), this option will be ignored if given.
+text table format}.
+
+This option will take precedence over the @option{--column} option, so when
+it is called along with requested columns, the latter will be ignored. This
+can be useful if you forget the identifier of a column after you have
+already typed some on the command-line. You can simply add a @option{-i}
+and run Table to see the whole list and remember. Then you can use the
+shell history (with the up arrow key on the keyboard), and retrieve the
+last command with all the previously typed columns present, delete
+@option{-i} and add the identifier you had forgot.
 
 @cindex AWK
 @cindex GNU AWK
