Corrected BuildProgram doc pointers in info and Man
The node name for BuildProgram's Invoking section was still unchanged from
its first version (`astcompilerun'). This would not allow `info
astbuildprog' to work properly. The node name is now corrected to `Invoking
astbuildprog'.

When Info couldn't find any menu item for `astbuildprog' it would look in
the Man-pages, but I noticed that it is bringing up the ConvertType Man
page instead! This was because of a mistake in creating of the Man-pages
which is now also corrected.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -51,7 +51,7 @@ License''.
 * bug-gnuastro: (gnuastro)Report a bug. How to report bugs
 
 * BuildProgram: (gnuastro)BuildProgram. Compile and run programs using Gnuastro's library.
-* astcompilerun: (gnuastro)Invoking astcompilerun. Options to BuildProgram.
+* astbuildprog: (gnuastro)Invoking astbuildprog. Options to BuildProgram.
 
 * ConvertType: (gnuastro)ConvertType. Convert different file types.
 * astconvertt: (gnuastro)Invoking astconvertt. Options to ConvertType.
@@ -530,7 +530,7 @@ Review of library fundamentals
 
 BuildProgram
 
-* Invoking astcompilerun::      Options and examples for using this program.
+* Invoking astbuildprog::       Options and examples for using this program.
 
 Gnuastro library
 
@@ -16591,10 +16591,10 @@ don't have to worry, you can just run BuildProgram and internal linking
 will be done correctly.
 
 @menu
-* Invoking astcompilerun::      Options and examples for using this program.
+* Invoking astbuildprog::       Options and examples for using this program.
 @end menu
 
-@node Invoking astcompilerun,  , BuildProgram, BuildProgram
+@node Invoking astbuildprog,  , BuildProgram, BuildProgram
 @subsection Invoking BuildProgram
 
 BuildProgram will compile and link a C source program with Gnuastro's
