Arithmetic program's operand function named properly
These functions were not following Gnuastro's standard naming convention
(function's file name first part of name). So they were corrected.

Also, the start of the "Invoking Warp" section of the book didn't have a
short description, so one was added.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -10811,7 +10811,9 @@ applications, see @ref{PSF}.
 @node Invoking astwarp,  , Resampling, Warp
 @subsection Invoking Warp
 
-The general template for invoking Warp is:
+Warp an input dataset into a new grid. Any homographic warp (for example
+scaling, rotation, translation, projection) is acceptable, see @ref{Warping
+basics} for the definitions. The general template for invoking Warp is:
 
 @example
 $ astwarp [OPTIONS...] InputImage
