Arithmetic uses x instead of * for multiplication
Until now `*' represented multiplication in the Arithmetic
program. However, `*' is meaningful to the shell (all the files in a
directory), so the users would have to quote it when they wanted to
multiply inputs. So as suggested by Guillaume Mahler, we are now using the
easier to use `x' which is also more similar to the way we write
multiplication on paper. It is not really too likely someone will want to
work on a file named `x', so it is reasonable.

Other issues solved with this commit:

 - The main parameters structure of Arithmetic was still called
   `imgarithparams'! This is now corrected to `arithmeticparams'.

 - When reading the `ge' operator, we were mistakenly setting the operator
   to `GAL_ARITHMETIC_OP_LE'! This has been corrected.

 - For easier readability (mainly done in the process of finding the
   previous issue), the operators in `BINARY_RT_LT_SET' are now immediately
   under each other.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -8480,20 +8480,9 @@ Addition, so ``@command{4 5 +}'' is equivalent to @mymath{4+5}.
 @item -
 Subtraction, so ``@command{4 5 -}'' is equivalent to @mymath{4-5}.
 
-@item *
-Multiplication, so ``@command{4 5 "*"}'' is equivalent to
-@mymath{4\times5}. On the command-line or in scripts, be sure to quote
-the multiplication sign (for example @command{"*"}).
-
-@cartouche
-@noindent
-@strong{Important reminder for multiplication:} please quote the
-@command{*} sign (for example, @command{"*"} or
-@command{'*'}). Without quotation, the shell will replace @command{*}
-with a list of all the files in your working directory which can
-produce unpredictable outputs. In any case, the input images are not
-affected, they are only read.
-@end cartouche
+@item x
+Multiplication, so ``@command{4 5 x}'' is equivalent to
+@mymath{4\times5}.
 
 @item /
 Division, so ``@command{4 5 /}'' is equivalent to @mymath{4/5}.
@@ -8878,7 +8867,7 @@ $ astarithmetic -q 10.32 3.84 - 2.7 pow
 $ astarithmetic 1 image.fits / --out=inverse.fits
 
 ## Multiply each pixel in image by -1:
-$ astarithmetic image.fits -1 "*" --out=negative.fits
+$ astarithmetic image.fits -1 x --out=negative.fits
 
 ## Subtract extension 4 from extension 1 (counting from zero):
 $ astarithmetic image.fits image.fits - --out=skysub.fits           \
